test/test_units/test_kclvm/test_types/invalid_test_data/protocol/protocol_5.k
protocol DataProtocol:
    x: str = "1"
    x = "2"
